--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -1,12 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito</title>
+    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+
+
+<body class="carrito">
+    <header class="header">
+        <div class="header__container">
+            <div class="header__logo">
+                <img src="/images/logo.png" alt="logo">
+            </div>
+            <div class="header__busqueda">
+                <input type="text" class="barra">
+                <img src="/images/Lupa.png" alt="" class="barra__lupa">
+            </div>
+            <div class="header__user">
+                <a href="/login">
+                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
+                    <p>Usuario</p>
+                </a>
+            </div>
+        </div>
+        <div class="header__burger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <nav class="header__nav">
+            <div class="header__localizacion">
+                <a href="">Estas en "lugar"</a>
+            </div>
+            <div class="header__opciones">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/productAll">Productos</a></li>
+                    <li><a href="">Quienes somos</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="header__iconos">
+                <a href="#"><img src="/images/configuracion.png" alt=""></a>
+                <a href="#"><img src="/images/campana.png" alt=""></a>
+                <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
+                <a href="#"><img src="/images/corazon.png" alt=""></a>
+            </div>
+        </nav>
+    </header>
+
+
+    <main class="Carrito">
+
+        <div>
+            caja contenedora con transparencia
+        </div>
+
+        <p>Paso 1 - Paso 2 - Paso 3</p>
+       
+        <section>
+            <article>
+                <div>
+                    <span>
+                        <br>Jabón con Pétalos</br>
+                        <img src="images/jabon con petalos.jpg" alt="">
+                        <p>$220-</p>
+                        <br>El jabón de Pétalos contiene aceites naturales que devuelven 
+                            la humedad e hidratación a tu piel; de igual manera conseguirás 
+                            una piel suave y lisa debido a su efecto astringente que regenera 
+                            la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
+                            le darán a tu piel un aspecto rejuvenecedor.</br>
+                            <p>CANTIDAD 1</p>
+                    </span>
     
+                <div>
+                    <button>Modificar</button>
+                    <button>Eliminar</button>
+                </div>
+    
+                    <span>
+                        <br>Jabón y Esponja Vegetal</br>
+                        <img src="images/jabon y esponja vegetal.jpg" alt="">
+                        <p>$860-</p>
+                        <br>Esponja vegetal (luffa cylindrica) y jabón natural 
+                           con plantas medicinales de distinta variedad.</br>
+                        <p>CANTIDAD 1</p>
+                    </span>
+    
+    
+                <div>
+                    <button>Modificar</button>
+                    <button>Eliminar</button>
+                </div>
+    
+    
+                    <span>
+                        <br>Toalla de Algodón</br>
+                        <img src="images/toallas de algodon.jpg" alt="">
+                        <p>$990-</p>
+                        <br>Básicos Premium para crear tu hogar ideal.</br>
+                        <p>CANTIDAD 1</p>
+                    </span>
+    
+                <div>
+                    <button>Modificar</button>
+                    <button>Eliminar</button>
+                </div>
+             </article>
+         </section>
+        
+
+       <section>
+           <br>Cupón de Descuento<br>
+
+           <p>Precio de Lista</p>
+           <p>Precio al Contado</p>
+           <p>Precio Contado/Cuotas</p>
+
+           <br>Seleccionar Método de Pago<br>
+           
+       </section>
+
+    </main>
+
+
+    <footer class="footer">
+        <div class="DatFooter">
+            <ul class="direcciones__footer">
+                <li><a href="/">Home</a></li>
+                <li><a href="/productAll">Productos</a></li>
+                <li><a href="#">Consejos</a></li>
+                <li><a href="#">Política de devolución</a></li>
+            </ul>
+            <div class="contacto__footer">
+                <h3>Contactanos</h3>
+                <ul class="redes__footer">
+
+                    <li><a href="#"><img class="footer__img-redes" src="/images/linkedln.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/twitter.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Facebook.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Instagram.png" alt=""></li></a>
+                </ul>
+            </div>
+        </div>
+        <div class="copy__footer">
+            <a href="">Terminos y condiciones</a>
+            <p>Argentina 2022 - Derechos reservados</p>
+        </div>
+    </footer>
 </body>
+
 </html>
