nuestra comunidad opina column

--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -69,8 +69,8 @@
                                         antiinflamatorias, analgésicas, refrescantes y tonificantes 💚</p>
                             </div>
                             <div class="main__info-inivisible">
-                                    <a href="/images/corazon.png"></a>
-                                    <a href="/images/carrito.png"></a>
+                                    <img src="/images/corazon.png" alt="">
+                                    <img src="/images/corazon.png" alt="">
                             </div>
                 </article>
             <h2> Jabón Exfoliante </h2>
