--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -3,6 +3,7 @@
   color: white;
   background-position: center center;
   background-attachment: fixed;
+  text-shadow: none;
 }
 
 /* Menú Categorías */
@@ -82,7 +83,7 @@
   margin-bottom: 40px;
 }
  
-.product .main__texto:hover{
+.product .main__texto:hover > .main__info-inivisible{
   opacity: 0.3;
   filter: alpha(opacity=100);
   zoom: 1;
