--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -7,7 +7,7 @@
     --verdeOscuro: #7FA794;
     --VioletaOscuro: #383843;
     --verdeSuave:#B4DCB1;
-    --celeste: #D0EDCA;
+    --celeste: #b9dff8;
     --marrónSuave: #DCDE6E;
     --ocre: #D9E66B;
     --azulMarino: #383843;
@@ -19,5 +19,8 @@
     --verdeFuerte: #3DBF26;
     --rosado: #E27FC4;
     --cremita: #FDF287;
+    --aquamarineSuave: #E7F9EE;
+    --grisSuave: #6a6060;
+    --celesteSuave: #d9ebf7;
 }
 
