--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -52,30 +52,32 @@
     </nav>
 </header>
   <main>
+    <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
     <section class="producto">
       <div class="producto__imagen">
         <img src="/images/jabonexfo_luffa2.jpg" alt="producto-combo">
         <h2>$ 300.-</h2>
         <span class="rating">⭐⭐⭐⭐</span>
       </div>
+      <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
       <div class="producto__texto">
-        <h4>🔥 Luffa + Jabón Exfoliante de Naranja y Café🔥</h4>
         <p>La luffa (o esponja vegetal) tiene propiedades exfoliantes, ideal
           para zonas a suavizar: codos, pies, manos. <br>
-          ♻️Cuando consideramos que ha cumplido su ciclo, la podés tirar en el compost, o
-          cualquier parte de la tierra, por éste motivo es importante usar jabones biodegradables.
+          ♻️Cuando consideramos que ha cumplido su ciclo, la podemos tirar en el compost, o
+          cualquier parte de la tierra; por éste motivo es importante usar jabones biodegradables.
           Para no contaminar el suelo con restos de susltancias químicas, que pueden quedar alojadas
           en la esponja.♻️ <br>
           🌻<span style="font-weight: bold;">Nuestra versión exfoliante de Naranja y Café
             combate el acné y la secrecion sebácea, dejando un delicioso aroma en la piel 🍊</span> <br>
-          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> SUMATE AL CAMBIO💚
+          Cuidar tu piel y la salud de la Tierra, sin maltratar animales, es posible; <br> 
+          <br> SUMATE AL CAMBIO💚
         </p>
         <div class="producto__cart">
           <a href="#" class="add-cart">Lo quiero! 🛒</a>
         </div>
       </div>
     </section>
-    <h1>Nuestra comunidad opina</h1>
+    <h2 class="titulares">Nuestra comunidad opina</h2>
     <section class="tarjetas">
       <div class="card__perfil">
         <div class="card__nombre">
@@ -117,7 +119,7 @@
         </div>
       </div>
     </section>
-    <h2 class="productosRelacionados">Productos Relacionados<h2>
+    <h2 class="titulares">Productos Relacionados<h2>
         <section class="row">
           <div class="card estilo-c">
             <a href="#">
@@ -131,7 +133,7 @@
                 <h3>$ 300.00.-</h3>
             </a>
             <span class="rating">⭐⭐⭐⭐</span>
-            <a href="#" class="add-cart">Lo quiero! 🛒</a>
+            <a href="" class="add-cart">Lo quiero! 🛒</a>
           </div>
           </div>
           <div class="card estilo-c">
