--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="header__user">
                 <a href="/login">
-                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
+                    <a href="/"><img src="/images/Usuario.png" alt="Usuario" class="icon__user"></a>
                     <p>Usuario</p>
                 </a>
             </div>
@@ -38,7 +38,7 @@
             <div class="header__opciones">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/productAll">Productos</a></li>
+                    <li><a href="/product">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
