--- a/site_ViveBio/views/productAll.html
+++ b/site_ViveBio/views/productAll.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header__container">
             <div class="header__logo">
-                <img src="/images/logo.png" alt="logo">
+                <a href="/"><img src="/images/logo.png" alt="logo"></a>
             </div>
             <div class="header__busqueda">
                 <input type="text" class="barra">
@@ -57,7 +57,7 @@
                             <div class="card estilo-c">
                                     <a href="#">
                             <div class="img-container">
-                                    <img src="/images/jabon_humectante_2.jpg" alt="producto">
+                                    <a href="/productCard"><img src="/images/jabon_humectante_2.jpg" alt="producto"></a>
                                     <span class="promo">10% off</span>
                             </div>
                             <div class="info-container">
