--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="header__container">
         <div class="header__logo">
-            <img src="/images/logo.png" alt="logo">
+          <a href="/"><img src="/images/logo.png" alt="logo"></a>
         </div>
         <div class="header__busqueda">
             <input type="text" class="barra">
