--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="header__user">
                 <a href="/login">
-                    <a href="/"><img src="/images/Usuario.png" alt="Usuario" class="icon__user"></a>
+                    <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                     <p>Usuario</p>
                 </a>
             </div>
