Register CSS edited

--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -15,7 +15,7 @@
         <a href="/"><img src="/images/logo.png" alt=""></a>
     </header>
     <main>
-        <section class="container">
+        <section class="register_container">
             <div class="box_introduccion">
                 <div class="box_1">
                     <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
