--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -15,7 +15,7 @@
     width: 150px;
 }
 
-.container {
+.register_container {
     width: 270px;
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
