listo con 3 productos

--- a/site_ViveBio/views/productCart.html
+++ b/site_ViveBio/views/productCart.html
@@ -53,6 +53,7 @@
     </header>
 
 
+
     <main>
         <section class="carrito-contenedor">
 
@@ -82,18 +83,67 @@
             <div>
                 <div class="carrito-buttons1">
                     <h2>CANTIDAD 1</h2>
-                    <h2>$220-</h2>
+                    <h2>$720-</h2>
                 </div>
 
                 <div class="carrito-buttons2">
                     <button type="submit">modificar</button>
                     <button type="submit">eliminar</button>
                 </div>
-
+                
             </div>
 
 
-          <!--   <div>
+            <!--JABON y ESPONJA-->
+            <article class="carrito-box">
+                <div class="carrito-images">
+                    <img src="images/jabon y esponja vegetal.jpg" alt="">
+                </div>
+
+                <div class="carrito-titulo">
+                    <h3>Jabón y esponja vegetal</h3>
+                    <h4>Este contiene aceites naturales que devuelven
+                        la humedad e hidratación a tu piel.
+                        <!--; de igual manera conseguirás 
+                        una piel suave y lisa debido a su efecto astringente que regenera 
+                        la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
+                        le darán a tu piel un aspecto rejuvenecedor.-->
+                    </h4>
+                </div>
+            </article>
+
+            <div>
+                <div class="carrito-buttons1">
+                    <h2>CANTIDAD 1</h2>
+                    <h2>$460-</h2>
+                </div>
+
+                <div class="carrito-buttons2">
+                    <button type="submit">modificar</button>
+                    <button type="submit">eliminar</button>
+                </div>
+            </div>
+
+
+             <!--JABON y ESPONJA-->
+             <article class="carrito-box">
+                <div class="carrito-images">
+                    <img src="images/toallas de algodon.jpg" alt="">
+                </div>
+
+                <div class="carrito-titulo">
+                    <h3>Toallas de algodon</h3>
+                    <h4>Este contiene aceites naturales que devuelven
+                        la humedad e hidratación a tu piel.
+                        <!--; de igual manera conseguirás 
+                        una piel suave y lisa debido a su efecto astringente que regenera 
+                        la epidermis. Su alto contenido en vitamina C y propiedades antioxidantes, 
+                        le darán a tu piel un aspecto rejuvenecedor.-->
+                    </h4>
+                </div>
+            </article>
+
+            <div>
                 <div class="carrito-buttons1">
                     <h2>CANTIDAD 1</h2>
                     <h2>$220-</h2>
@@ -103,8 +153,9 @@
                     <button type="submit">modificar</button>
                     <button type="submit">eliminar</button>
                 </div>
+            </div>
 
-            </div> -->
+
 
             <!-- LISTA -->
             <div class="carrito-contenedor-lista">
