--- a/site_ViveBio/public/css/carrito.css
+++ b/site_ViveBio/public/css/carrito.css
@@ -1,6 +1,6 @@
 .carrito-contenedor {
    
-    background-color: rgba(184, 247, 196, 0.8);
+    background-color: rgba(184, 247, 196, 0.9);
     color:rgb(92, 92, 92);
     width: 95%;
     padding: 5px;
@@ -12,7 +12,7 @@
 
 .carrito_pasos p {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     color: rgb(47, 46, 46);
     margin-bottom: 5px;
     display: flex;
@@ -21,7 +21,8 @@
 
 .carrito-box {
     width: 100%;
-    border: solid 2px #383843;
+    border: solid 2px #7FA794;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
 }
@@ -32,6 +33,7 @@
 
 .carrito-images img {
     width: 100%;
+    height: 100%;
     padding: 5px;  
 }
 
@@ -43,7 +45,6 @@
     padding: 12px;
     /* border: solid 2px green; */
 }
-
 
 .carrito-contenedor p {
     padding: 10px;
@@ -98,7 +99,7 @@
 .carrito-input {
     width: 100%;
     display: flex;
-    padding: 5px;
+    padding-bottom: 15px;
     justify-content:center;
     /* border: solid 2px rgb(199, 71, 246); */
 }
@@ -106,7 +107,7 @@
 .carrito-lista {
     width: 100%;
     padding: 10px;
-    margin: 5px 0 5px;
+    margin: 5px 0 30px;
     text-shadow: 0 0 2px black;
     display: flex;
     justify-content: space-around;
