--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -3,7 +3,7 @@
     --verdeAmarillento: #D9E66B;
     --verdeClaro-Opaco: rgba(208, 237, 202, 0.5);
     --grisClaro: #C4C4C4;
-    --grisOscuro: ;
+    --grisOscuro:var(--verdeOscuro) ;
     --trasparencia: rgba(0,0,0,0);
     --verdeOscuro: #7FA794;
     --VioletaOscuro: #383843;
